	  - added 'RGXG_NONULLBYTE' option
	* include/rgxg/number.h, lib/number.c: refactored code
	  - removed run-time checks from static functions
	  - use 'size_t' for 'min_length' function parameter
	  - code cleanup and optimizations
	* include/rgxg/utils.h, lib/utils.c, src/escape.c:
	  - added 'options' parameter to 'rgxg_utils_escape_string' function

2013-04-10	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/utils.h, lib/utils.c:
	  - use 'size_t' instead of 'int' for function parameters

2013-04-09	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* man/rgxg.1:
	  - fixed typo
	  - removed LICENSE section

2013-04-07	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* lib/number.c: declared 'limits' variable static
	* lib/internal_utils.c, lib/internal_utils.h, lib/net.c,
	  lib/number.c:
	  - changed prefix of internal function to 'internal_'
	* Makefile.am:
	  - added '-no-undefined' to librgxg_la_LDFLAGS
	  - only export symbols that start with 'rgxg_'

2013-04-05	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/number.h, +lib/internal_utils.c, +lib/internal_utils.h,
	  lib/net.c, lib/number.c, Makefile.am:
	  - removed 'rgxg_number' function from library
	  - renamed 'rgxg_number' function to 'rgxg_number_single'
	  - minor code cleanup
	* lib/number.c:
	  - rgxg_number_greaterequal: fixed bug with leading zeros
	* src/alternation.c, src/cidr.c, src/escape.c, src/main.c,
	  src/range.c:
	  - adjusted argument parsing to support strict POSIX compliance

2013-04-04	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/types.h, lib/net.c, src/cidr.c, man/rgxg.1:
	  - added support for IPv6 mixed notation
	  - added 'RGXG_NOMIXEDNOTATION' option
	  - added '-s' option to 'cidr' command
	  - fixed several bugs with IPv6 parsing
	  - fixed several bugs with IPv6 regex generation
	  - optimized IPv4 and IPv6 regex generation
	* include/rgxg/types.h, lib/common_macros.h, lib/net.c, lib/number.c:
	  - added 'RGXG_ERROR_MUTEXOPTIONS' error
